<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.login.ShoppyLoginFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/app_name" />

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/shoppy_hint_enter_username"
        />
    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/shoppy_hint_enter_password"
        />
    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="end"
        android:textColor="@color/purple_700"
        android:paddingRight="20dp"
        android:text="@string/shoppy_text_forgotpassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/shoppy_button_login" />
    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/purple_700"
        android:gravity="center"
        android:text="@string/shoppy_text_signup" />

</LinearLayout>